Fix large table horizontal scroll and prevent side-by-side tables

--- a/app/assets/stylesheets/framework/mixins.scss
+++ b/app/assets/stylesheets/framework/mixins.scss
@@ -26,15 +26,10 @@
  */
 @mixin markdown-table {
   width: auto;
-  display: inline-block;
+  display: block;
   overflow-x: auto;
   border: 0;
   border-color: $gl-gray-100;
-
-  @supports (width: fit-content) {
-    display: block;
-    width: fit-content;
-  }
 
   tr {
     th {
